# auto-airflow-thermostat

./: Cargo.toml
.github/workflows/: rust_ci.yml
.zed/: settings.json
esp32-temperature-monitor/: .gitignore  Cargo.toml  diagram.json  meson.build  wokwi.toml
esp32-temperature-monitor/src/: lib.rs
esp32-temperature-monitor/src/temperature/: station.rs
src/temperature/: mod.rs
temperature-monitor-interface/: Cargo.toml
temperature-monitor-interface/src/: lib.rs
temperature-monitor-interface/tests/: bit_reader.rs  byte_reader.rs  temperature_reading.rs
temperature-monitor-interface/tests/features/: bit_reader.feature  byte_reader.feature  temperature_reading.feature
