[package]
edition = "2021"
name = "esp32-temperature-monitor"
version = "0.1.0"

[[bin]]
name = "esp32-temperature-monitor"
path = "./src/bin/main.rs"

[dependencies]
temperature-monitor-interface = { path = "../temperature-monitor-interface" }

critical-section = "1.2.0"
embassy-net = { version = "0.6.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embedded-io = "0.6.1"
embedded-hal = "1.0.0"
esp-alloc = "0.7.0"
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
esp-wifi = { version = "0.13.0", features = [
    "builtin-scheduler",
    "esp-alloc",
    "esp32c3",
    "log",
    "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
